--- a/WeCanPay/WeCanPay/MyInputView.xib
+++ b/WeCanPay/WeCanPay/MyInputView.xib
@@ -47,7 +47,7 @@
                     </state>
                 </button>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SfN-Kn-WhY">
-                    <rect key="frame" x="2" y="46" width="374" height="1"/>
+                    <rect key="frame" x="0.0" y="49" width="374" height="1"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="Oe9-NI-XAC"/>
@@ -57,9 +57,9 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="7AA-I4-bFd" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="2ak-iw-oMd"/>
-                <constraint firstAttribute="trailing" secondItem="SfN-Kn-WhY" secondAttribute="trailing" constant="-56" id="CIO-Co-EQW"/>
-                <constraint firstAttribute="bottom" secondItem="SfN-Kn-WhY" secondAttribute="bottom" constant="3" id="Cm8-p8-SET"/>
-                <constraint firstItem="SfN-Kn-WhY" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="2" id="L7L-Fj-mXa"/>
+                <constraint firstAttribute="trailing" secondItem="SfN-Kn-WhY" secondAttribute="trailing" constant="-54" id="CIO-Co-EQW"/>
+                <constraint firstAttribute="bottom" secondItem="SfN-Kn-WhY" secondAttribute="bottom" id="Cm8-p8-SET"/>
+                <constraint firstItem="SfN-Kn-WhY" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="L7L-Fj-mXa"/>
                 <constraint firstAttribute="trailing" secondItem="gt4-Yy-EQe" secondAttribute="trailing" constant="21" id="Ozp-s1-rbi"/>
                 <constraint firstItem="gt4-Yy-EQe" firstAttribute="leading" secondItem="85r-TR-1Fl" secondAttribute="trailing" constant="1" id="PxG-yc-l5B"/>
                 <constraint firstItem="85r-TR-1Fl" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="QhI-9u-Yjf"/>
