--- a/WeCanPay/WeCanPay/MainViewController.xib
+++ b/WeCanPay/WeCanPay/MainViewController.xib
@@ -401,7 +401,7 @@
                             </constraints>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.0078431372549019607" green="0.78431372549019607" blue="0.45490196078431372" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstItem="ph9-WM-vuy" firstAttribute="leading" secondItem="QxW-y3-vcR" secondAttribute="leading" id="75R-x6-IzS"/>
                         <constraint firstItem="ph9-WM-vuy" firstAttribute="top" secondItem="QxW-y3-vcR" secondAttribute="top" id="Xt8-9m-wCk"/>
