--- a/WeCanPay/WeCanPay/LoginViewController.xib
+++ b/WeCanPay/WeCanPay/LoginViewController.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController">
@@ -19,45 +20,57 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z8X-AT-8BB" userLabel="passwordView">
-                    <rect key="frame" x="0.0" y="125" width="375" height="45"/>
+                    <rect key="frame" x="8" y="299" width="359" height="47"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="45" id="XbK-1I-z7C"/>
+                        <constraint firstAttribute="height" constant="47" id="fcG-79-Bh3"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6xB-d9-eVV">
-                    <rect key="frame" x="8" y="184" width="359" height="45"/>
-                    <color key="backgroundColor" red="1" green="0.66103732912333635" blue="0.15360495214984038" alpha="1" colorSpace="calibratedRGB"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SYW-9z-FiF" userLabel="userNameView">
+                    <rect key="frame" x="8" y="238" width="359" height="47"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="45" id="l1W-B0-u48"/>
+                        <constraint firstAttribute="height" constant="47" id="RMA-9G-R7z"/>
+                    </constraints>
+                </view>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_img" translatesAutoresizingMaskIntoConstraints="NO" id="mNJ-yp-NmY">
+                    <rect key="frame" x="138" y="86" width="99" height="127"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="mNJ-yp-NmY" secondAttribute="height" multiplier="99:127" id="lNm-Tq-5XB"/>
+                        <constraint firstAttribute="width" constant="99" id="qKS-1y-kMi"/>
+                    </constraints>
+                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6xB-d9-eVV">
+                    <rect key="frame" x="8" y="370" width="359" height="47"/>
+                    <color key="backgroundColor" red="0.28235294117647058" green="0.84313725490196079" blue="0.69411764705882351" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="47" id="Nd3-yH-cKq"/>
                     </constraints>
                     <state key="normal" title="登录">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SYW-9z-FiF" userLabel="userNameView">
-                    <rect key="frame" x="0.0" y="80" width="375" height="45"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="45" id="Ibr-jv-IJV"/>
-                    </constraints>
-                </view>
             </subviews>
-            <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.94901960784313721" green="0.94509803921568625" blue="0.93725490196078431" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="6xB-d9-eVV" firstAttribute="top" secondItem="Z8X-AT-8BB" secondAttribute="bottom" constant="14" id="64W-a0-yNx"/>
-                <constraint firstItem="6xB-d9-eVV" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="6pq-0X-DSS"/>
-                <constraint firstItem="Z8X-AT-8BB" firstAttribute="top" secondItem="SYW-9z-FiF" secondAttribute="bottom" id="8iO-n7-Buu"/>
-                <constraint firstAttribute="trailing" secondItem="SYW-9z-FiF" secondAttribute="trailing" id="BaS-K6-qjF"/>
-                <constraint firstItem="SYW-9z-FiF" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="D3g-XI-Pn2"/>
-                <constraint firstItem="Z8X-AT-8BB" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="LZ6-WW-zDa"/>
-                <constraint firstAttribute="trailing" secondItem="Z8X-AT-8BB" secondAttribute="trailing" id="VAY-UZ-WwJ"/>
-                <constraint firstAttribute="trailing" secondItem="6xB-d9-eVV" secondAttribute="trailing" constant="8" id="dNN-Dt-M2e"/>
-                <constraint firstItem="SYW-9z-FiF" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="80" id="iAY-PQ-6pa"/>
+                <constraint firstItem="Z8X-AT-8BB" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="7AU-JM-1qw"/>
+                <constraint firstItem="mNJ-yp-NmY" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="86" id="DUQ-NY-DbF"/>
+                <constraint firstAttribute="trailing" secondItem="Z8X-AT-8BB" secondAttribute="trailing" constant="8" id="OWP-Pl-yvx"/>
+                <constraint firstItem="6xB-d9-eVV" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="Oks-gd-pI7"/>
+                <constraint firstItem="Z8X-AT-8BB" firstAttribute="top" secondItem="SYW-9z-FiF" secondAttribute="bottom" constant="14" id="UcZ-nh-RM5"/>
+                <constraint firstAttribute="trailing" secondItem="SYW-9z-FiF" secondAttribute="trailing" constant="8" id="Wvc-KT-cVD"/>
+                <constraint firstAttribute="trailing" secondItem="6xB-d9-eVV" secondAttribute="trailing" constant="8" id="aDY-Ub-Qt3"/>
+                <constraint firstItem="6xB-d9-eVV" firstAttribute="top" secondItem="Z8X-AT-8BB" secondAttribute="bottom" constant="24" id="t3h-kY-4Jw"/>
+                <constraint firstItem="SYW-9z-FiF" firstAttribute="top" secondItem="mNJ-yp-NmY" secondAttribute="bottom" constant="25" id="xtE-aM-ohQ"/>
+                <constraint firstItem="SYW-9z-FiF" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="xvG-yv-aUc"/>
+                <constraint firstItem="mNJ-yp-NmY" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="yRg-Et-c9p"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
             <point key="canvasLocation" x="252.5" y="382.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="login_img" width="198" height="255"/>
+    </resources>
 </document>
