--- a/WeCanPay/WeCanPay/MyInputView.xib
+++ b/WeCanPay/WeCanPay/MyInputView.xib
@@ -12,7 +12,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="账号" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7AA-I4-bFd">
-                    <rect key="frame" x="15" y="15" width="34" height="21"/>
+                    <rect key="frame" x="13" y="15" width="34" height="21"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="34" id="MYh-4X-bD5"/>
                         <constraint firstAttribute="height" constant="21" id="roI-6R-bcB"/>
@@ -22,14 +22,14 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="admin" translatesAutoresizingMaskIntoConstraints="NO" id="Isl-5m-zi8">
-                    <rect key="frame" x="22" y="14" width="22" height="22"/>
+                    <rect key="frame" x="13" y="14" width="22" height="22"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="22" id="gj9-fC-5TH"/>
                         <constraint firstAttribute="width" constant="22" id="jNw-8h-sjI"/>
                     </constraints>
                 </imageView>
                 <textField opaque="NO" clipsSubviews="YES" tag="10" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="85r-TR-1Fl">
-                    <rect key="frame" x="55" y="10" width="221" height="30"/>
+                    <rect key="frame" x="46" y="10" width="236" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="fif-0W-0jE"/>
                     </constraints>
@@ -37,7 +37,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gt4-Yy-EQe">
-                    <rect key="frame" x="277" y="14" width="22" height="24"/>
+                    <rect key="frame" x="283" y="14" width="22" height="24"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="22" id="FOP-V3-Pyv"/>
                         <constraint firstAttribute="height" constant="24" id="x1u-32-zTO"/>
@@ -46,8 +46,8 @@
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SfN-Kn-WhY">
-                    <rect key="frame" x="0.0" y="49" width="374" height="1"/>
+                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SfN-Kn-WhY">
+                    <rect key="frame" x="0.0" y="49" width="320" height="1"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="Oe9-NI-XAC"/>
@@ -57,17 +57,17 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="7AA-I4-bFd" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="2ak-iw-oMd"/>
-                <constraint firstAttribute="trailing" secondItem="SfN-Kn-WhY" secondAttribute="trailing" constant="-54" id="CIO-Co-EQW"/>
+                <constraint firstAttribute="trailing" secondItem="SfN-Kn-WhY" secondAttribute="trailing" id="CIO-Co-EQW"/>
                 <constraint firstAttribute="bottom" secondItem="SfN-Kn-WhY" secondAttribute="bottom" id="Cm8-p8-SET"/>
                 <constraint firstItem="SfN-Kn-WhY" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="L7L-Fj-mXa"/>
-                <constraint firstAttribute="trailing" secondItem="gt4-Yy-EQe" secondAttribute="trailing" constant="21" id="Ozp-s1-rbi"/>
+                <constraint firstAttribute="trailing" secondItem="gt4-Yy-EQe" secondAttribute="trailing" constant="15" id="Ozp-s1-rbi"/>
                 <constraint firstItem="gt4-Yy-EQe" firstAttribute="leading" secondItem="85r-TR-1Fl" secondAttribute="trailing" constant="1" id="PxG-yc-l5B"/>
                 <constraint firstItem="85r-TR-1Fl" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="QhI-9u-Yjf"/>
                 <constraint firstItem="gt4-Yy-EQe" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" constant="1" id="ez3-WU-GvJ"/>
                 <constraint firstItem="85r-TR-1Fl" firstAttribute="leading" secondItem="Isl-5m-zi8" secondAttribute="trailing" constant="11" id="fif-1i-jLy"/>
-                <constraint firstItem="Isl-5m-zi8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="22" id="khU-Ie-neh"/>
+                <constraint firstItem="Isl-5m-zi8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="13" id="khU-Ie-neh"/>
                 <constraint firstItem="Isl-5m-zi8" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="sfg-0y-0SQ"/>
-                <constraint firstItem="7AA-I4-bFd" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="yY9-cH-4Dy"/>
+                <constraint firstItem="7AA-I4-bFd" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="13" id="yY9-cH-4Dy"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
@@ -81,7 +81,7 @@
         </view>
     </objects>
     <resources>
-        <image name="admin" width="36" height="41"/>
+        <image name="admin" width="36" height="36"/>
         <image name="eye" width="28" height="28"/>
     </resources>
 </document>
