--- a/WeCanPay/WeCanPay/LoginViewController.xib
+++ b/WeCanPay/WeCanPay/LoginViewController.xib
@@ -46,9 +46,14 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="47" id="Nd3-yH-cKq"/>
                     </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
                     <state key="normal" title="登录">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="scS-E8-RCl">
+                    <rect key="frame" x="149" y="539" width="80" height="40"/>
+                    <state key="normal" title="返回"/>
                 </button>
             </subviews>
             <color key="backgroundColor" red="0.94901960784313721" green="0.94509803921568625" blue="0.93725490196078431" alpha="1" colorSpace="calibratedRGB"/>
