--- a/WeCanPay/WeCanPay/ChooseViewController.xib
+++ b/WeCanPay/WeCanPay/ChooseViewController.xib
@@ -146,7 +146,7 @@
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="选择支付方式" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pvA-Rk-56Y">
                                     <rect key="frame" x="8" y="187" width="98" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kMN-lH-Y39">
@@ -189,7 +189,7 @@
         </view>
     </objects>
     <resources>
-        <image name="arrowdown" width="26" height="15"/>
+        <image name="arrowdown" width="42" height="42"/>
         <image name="second_normal" width="30" height="30"/>
     </resources>
 </document>
